[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Login.gd" type="Script" id=1]
[ext_resource path="res://scripts/autotext.gd" type="Script" id=2]
[ext_resource path="res://scenes/LineEdit5.gd" type="Script" id=3]
[ext_resource path="res://scenes/OptionButton.gd" type="Script" id=4]
[ext_resource path="res://scenes/HACKEAM.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.355469, 0.0319366, 0.0319366, 1 )
border_blend = true
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.865173, 0.86571, 0.878906, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.632843, 0.695672, 0.910156, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border" ]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 274.0
margin_right = 144.0
margin_bottom = 500.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
columns = 1
_sections_unfolded = [ "Margin", "Size Flags" ]
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 7.0
margin_right = 66.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Username" type="Label" parent="GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 39.0
margin_right = 66.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Email" type="Label" parent="GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 71.0
margin_right = 66.0
margin_bottom = 85.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Email Id"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Pass" type="Label" parent="GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 103.0
margin_right = 66.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors" ]

[node name="Gender" type="Label" parent="GridContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 135.0
margin_right = 66.0
margin_bottom = 149.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gender"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Phone" type="Label" parent="GridContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 167.0
margin_right = 66.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Phone no."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors" ]

[node name="type" type="Label" parent="GridContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 199.0
margin_right = 66.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Type"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="GridContainer2" type="GridContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 201.0
margin_top = 289.0
margin_right = 326.0
margin_bottom = 481.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 1
_sections_unfolded = [ "Rect", "Size Flags" ]
__meta__ = {
"_edit_group_": true
}

[node name="LineEdit" type="LineEdit" parent="GridContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 125.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter your name"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="LineEdit2" type="LineEdit" parent="GridContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 125.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter your username"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="LineEdit3" type="LineEdit" parent="GridContainer2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 125.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter your email"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="LineEdit4" type="LineEdit" parent="GridContainer2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 125.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter your password"
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="LineEdit5" type="OptionButton" parent="GridContainer2" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 125.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="LineEdit6" type="LineEdit" parent="GridContainer2" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 160.0
margin_right = 125.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter your no."
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="OptionButton" type="OptionButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 193.0
margin_top = 641.0
margin_right = 279.0
margin_bottom = 687.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 0
selected = -1
items = [  ]
script = ExtResource( 4 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_styles" ]

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 230.0
margin_right = 126.0
margin_bottom = 244.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fill all the fields:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="HACKEAM" type="Sprite" parent="." index="4"]

position = Vector2( 228.884, 104.134 )
scale = Vector2( 0.363195, 0.33074 )
texture = ExtResource( 5 )

[node name="Signup" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 191.0
margin_top = 736.0
margin_right = 254.0
margin_bottom = 759.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sign Up"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_styles" ]

[node name="HTTPRequest" type="HTTPRequest" parent="." index="6"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8

[connection signal="pressed" from="Signup" to="." method="_on_Signup_pressed"]


